language/move-lang/tests/move_check/parser/extra_text_after_main.move
// There should not be any tokens after the top-level main function.
fun main() {
}

fun foo() {
}
